--- a/html.1.html
+++ b/html.1.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>?????</title>
+    <title>异变</title>
 </head>
 <body>
-    hhh
+    <p>【时之圣者也，时之凶者也。此亦蒙昧世，此亦智慧世。此亦光明时节，此亦黯淡时节。此亦笃信之年，此亦大惑之年。此亦多丽之阳春，此亦绝念之穷冬。人或万物具备，人或一事无成。我辈其青云直上，我辈其黄泉永坠。】[序言之首章] <br>
+
+        辘辘的地面被马蹄狠狠地踏出一片水花，倒影着清晨朦胧与初升阳光的金辙木鞣轮，马车四面被精致地用暗紫色丝绸装裹，镶金嵌宝的窗牖被一帘灰色的绉纱遮挡，无论道路途中经过了多少的坑坑洼洼，这辆马车仍然平稳地飞驰在这座雾都的街间巷内，店前桥下；车夫向内部的主人示意，快到目的地了，灰色纱帘被拉开，但也只能隐约看见一柄手杖和一双手帕，随后，帘子再一次拉上...... <br>
+        威廉夫人一如既往地准备好了早餐，每天从早上烘焙餐包已经成为她的日常，牛奶，花生酱，蓝莓酱，餐具，还有接待客人用的现泡咖啡，一切准备就绪！只是，在火炉中的面包出炉时，那个本该在座位上用餐的身影却反常的不见踪影。
+        殷在威廉夫人的敲门声中睁开了迷蒙的双眼，他不确定自己是不是真的醒了，在目击了那件事之后，殷对自己的精神力已经失去了自信，他把自己的双手敷在自己脸上，左眼从中指和无名指中间的缝隙望向垂挂着蛛丝的木质天花板，他感到模糊不堪，于是就狠狠地向上拉动眼皮，获得了真实感的同时，殷也发现自己的房间里充斥这一种自己不熟悉的敞亮——窗帘拉开了一半，阳光在丁达尔效应的衬托下，直直地照在窗前的书桌上。
+        殷坐了起来，扣上了自己衬衫上没扣上的两颗扣子，摸索了一下枕边的眼镜，但是并没有像以前那样顺手摸到。
+        [不在吗...难道在床下？]
+        殷把头探到床沿，没等他看见地板，一阵猛烈的拉伸痛感窜进殷的大脑，一些画面也闪过他的大脑。
+        [啊...痛痛痛，落枕了？可恶眼镜不在床下...我昨天睡觉的时候放在...等等！！！]
+        殷突然把自己的被子掀起来，眼前的一幕令他震惊：衬衫的下半段已经破损的不成样子，腰部几乎完全裸露，就连腿上也套着一件泥泞不堪的学工裤，吊带已经断在了不知名的地方，最重要的是床上几乎全是血迹。
+        殷差点叫出声来，不过他忍住了，检查了一下全身，没有任何一处外伤，只是脖子的转动有点不自然。
+        [什么情况！这里是我的我是没错，我迷蒙的意识里敲门的人也应该是威廉夫人，可这些血！它们不是我的！难道有人在我的卧室？那个人是谁，造成这一切的人不可能是我，总之现在暂定另有其人，他已经离开？]
+        “我想我需要换件衣服...”殷的话刻意很大声。
+        同时，殷竖起耳朵感受衣柜的动静，可惜的是，房间内一直很安静，看不出来有什么古怪，除了被子底下的血迹。
+        “卡斯纳！好了吗？！托拉夫先生的马车已经到了，不要让人家等我们太久！”威廉夫人的声音又从殷的卧室的锁孔传入。
+        “啊......好好，马上，已经在穿衣服了！”殷回应道，“等等，卡斯纳是谁！”
+        “你在说什么啊，虽然不知道你昨晚在卧室里捣鼓什么名堂，但别把自己的名字忘了啊，我不想再催第二遍，托拉夫先生已经等了有一段时间了！早餐就路上再吃吧！”威廉夫人的声音似乎已经朝门外走去，似乎是为托拉夫先生开门去了。
+        [卡斯纳？我不是殷吗？刚才威廉夫人也认得我的声音，我也确信她就是威廉夫人没错，可是，为什么她要叫我卡斯纳？]威廉夫人与殷的隔空喊话令殷无比确认这就是他认识的威廉夫人，但是威廉夫人不可能开出这种玩笑。
+        殷从床上跳起，快速退去自己的上衣和泥泞的学工裤[不能被威廉夫人发现，这事连我自己都说不灵清，静观其变吧。]殷把他们塞进了自己的书包里，双脚快速踢进拖鞋里，走到衣柜边，衣柜半开的，殷抓起一件干净的学工装就开始往身上套，没有眼镜他穿的很吃力，不过在一番挣扎后还是勉强穿在了身上。
+        很快地重新用被子整齐地掩盖住血迹，乍一看这个卧室与平时一般无二，殷站在窗前，发现在床头柜上的镜子中映照出了什么东西——熟悉的银色光亮，是他的银边眼镜，在书桌上，殷一转身回头看自己的书桌上果然安静地躺着一副银边眼镜，殷急忙地带上，世界变得更清晰了：书桌上有一本摊开的笔记本，床很整洁，地面上有一些胡乱的脚印，半开的窗帘外阳光已经很明艳了，把房间里照的敞亮。
+        这一刻让殷感到很诡异，门外没有声音，卧室内的场景也有种说不出来的奇怪。
+        [这些脚印是我刚才找眼镜的时候造成的吗......怎么会有这么多灰啊，我平时应该有经常打扫啊，难道是忘关窗了？]殷把窗帘整个拉开，窗户果然开着。今天的天气很好，迷蒙的蒸气与工厂的废气似乎在现在并不是非常弥漫，毕竟在城市里只有黎明前后是留给烟雾消散的时间。
+        [啊...这个绝对不能被威廉夫人发现！也许我杀了人威廉夫人都会包庇我免受法律的制裁，但是如果我把卧室弄的满地是灰，她一定会杀了我！]
+        “只能这样了！”殷背上书包，穿上袜子，快速踏进他半旧的学生皮鞋，打开了门把手。
+        “好了没！卡斯纳！你今天是怎么了？睡懒觉可不是你的习惯啊！”威廉夫人的催促声再一次从楼下传来。
+        “好了好了！”说着殷尽量把关门声撞地很响，随后从门前的地毯下去出一串金属钥匙，放进了书包的侧夹层里。
+        [果然还是不能让您有进来的可能啊，威廉夫人，我想这莫名其妙且糟糕透顶的一切，我自己一个人应该能处理，大概吧。]
+        
+        威廉夫人已经在厨房里做一些清洗工作了，至于殷的早餐已经被刷好酱，打包好放在餐桌上了。
+        “霍！小子今天怎么这么慢啊？我又只好劳烦夫人为我泡了一杯咖啡了...”托拉夫的声音很硬朗，说着他继续又抿了一口咖啡像个皇室的贵族，接着从沙发上坐起。
+        殷眼前这个男人很高大，络腮胡似乎是故意留在脸上的，确实有些人以此为魅力的自豪点，托拉夫自称‘绅士’，他像螃蟹一样宽的肩臂外套着一件内白外黑的竖条纹西装，不得不说，配上匀称的西装裤与善良的软跟皮靴后，整个人由于体型而带来的粗鲁感被削减了许多，本像条鳄鱼的脸也被衬地像一头慈祥的猩猩。
+        “走吧。”殷拿上早餐，已经漫不经心地走到玄关前了，“先生今天也是很精神呢！”
+        “霍！是吧，这身西装就是你爸推荐的，怎么样，你爸眼光真不错啊！”托拉夫的话里很得意，似乎他还在为刚才给威廉夫人讲了几个笑话而沾沾自喜，他喜欢讲些他认为是笑话的笑话，更何况还是威廉夫人这种当初镇上的美女，“小鬼！下次快些，叔叔我的时间可是按秒收费的哦。”
+        “知道了，时间不多了，走吧。”
+        托拉法把剩下的咖啡一饮而尽，全然失去了刚才做作的风度“走”。
+        [如果您直接一饮而尽的话，应该可以省下很多秒吧？]
+        
+        “小鬼干嘛呢，快上车啊！”托拉夫再次在车厢里催促道。
+        “马上，刚刚回去拿了个东西。”殷说着把一件物品戴在自己的项上。
+        殷从屋檐的阴影下跑出，一跃而上马车的车蹬，爬进车里，托拉夫随即关上了车门，马车门上的流苏装饰都被震得晃晃，殷一边往车上坐稳一边拉开了早餐的包装袋。
+        “别那么用力啊，痛死了！”殷一上车就抱怨托拉夫拉自己上车时太痛了。
+        “昨天发生了什么，殷？”托拉夫一脸严肃，满是青筋的手上已经戴上了一对手套搭在手杖上。
+        “什么...昨天发生了什么...?”殷的表情有些僵硬，似乎托拉夫已经知道了些什么。
+        “难道你今天早上没有发现异常吗？”托拉夫有点疑惑。
+        “好像是有点奇怪，夫人叫我起床时好像叫我‘卡斯纳’，但我并不知道为什么。”殷其实并不想把这件事告诉托拉夫，但见他似乎是知情之人，于是就选择性的招供了一部分。
+        [为什么托拉夫先生刚才......好像叫我的时候是叫我殷......]
+        “没错，我昨晚也接受到了同样的[信号]，你可能不理解，总之，这个世界还有很多你不知道的东西，信号就类似于一种程序的修改，认识你的人都会被该渠道修改记忆。”
+        “修改记忆！？这根本不科学吧！？人脑的储存机制的理论研究都还不成熟吧！？怎么会有这样的技术！”
+        “的确，这对你来说可能有点太突然了，对我来说就是有些不知缘由，但是这种事的发生到是不奇怪。”托拉夫看向窗外，正在思考怎么像殷解释目前的情况，明显能看出他仍有些无法透露的信息。
+        殷看着托拉夫，他感觉自己的身上刚刚发生了一件不可思议的事，而他可能知道原委的叔叔正在考虑要不要告诉他。
+        “你究竟都知道些什么？什么叫这个世界的很多我都不知道，你又知道什么，凭什么这么说？”殷的镜片下，眼睛已经放出了光，洞察这眼前的男人。
+        “你知道你父亲的名字叫什么吗？”
+        “我哪知道，那两个混蛋直接抛下我去地狱了，我连知道的机会都没有啊，问这个干嘛？”
+        “看来你对你父亲还是没影响啊，嘶......那就搞不懂了，不是上位精神力逆流...难道......你初潮了！？？”
+        “什么你在开什么玩笑？”殷突然尴尬地羞红了脸</p>
 </body>
 </html>
