--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5">
     <title>INKY同学的PAGE</title>
+    <link rel="short icon" href="tupian.ico">
     <meta name="description" content="95后青年，后端开发者，略懂前端, 学生，实习，缺乏社会的毒打">
     <meta name="keywords" content="Java,Spring,个人博客，微信小程序，博客">
     <meta name="format-detection" content="telephone=no">
@@ -95,26 +96,12 @@
                 <article id="page">
                         
                         <hr>
-                        <h2>序章【牛马的第一版本，爱看不看】</h2>
+                        <h2>序章[]</h2>
                         <div class="tool">
                           <p>故事开始时的一些事</p>
-                          <a href="html.1.html">第一章</a>
+                          <a href="第一章.md">第一章</a>
 
-                          <a href="html.2.html">第二章</a>
-
-                          <a href="html.3.html">第三章</a>
-
-                          <a href="html.4.html">第四章</a>
-
-                          <a href="html.5.html">第五章</a>
-
-                          <a href="html.6.html">第六章</a>
-
-                          <a href="html.7.html">第七章</a>
-
-                          <a href="html.8.html">第八章</a>
-
-                          <a href="html.9.html">第九章</a>
+                          <a href="第二章.md">第二章</a>
 
                         </div>
 
