--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="Dmego Home">
     <meta name="keywords" content="Dmego,Homepage">
     <meta name="author" content="Dmego">
-    <title>Dmego Home</title>
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/onlinewebfonts.css"/>
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/vno.css">
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/apple-touch-icon.png">
     <link rel="icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/favicon.ico">
+    <title class="panel-cover__title panel-title iUp">INLY's Crown of Sin</title>
 </head>
 
 <body>
