--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/apple-touch-icon.png">
     <link rel="icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/favicon.ico">
-    <title class="panel-cover__title panel-title iUp">INLY's Crown of Sin</title>
+    <title class="panel-cover__title panel-title iUp">INKY's Crown of Sin</title>
 </head>
 
 <body>
@@ -72,6 +72,9 @@
                                     </li>
                                     <li class="navigation__item">
                                         <a href="time.html" class="blog-button" target="_blank">没卵用的时间</a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="livePic.html" class="blog-button">照片墙[picwall]</a>
                                     </li>
                                 </ul>
                             </nav>
