--- a/livePic.html
+++ b/livePic.html
@@ -95,7 +95,7 @@ jQuery(function ($) {
 			<li class="mis-slide">
 				<a href="#" class="mis-container">
 					<figure>
-						<img src="images/garden06.jpg" alt="Garden Walkway">
+						<img src="images/6.jpg" alt="Garden Walkway">
 						<figcaption>name6</figcaption>
 					</figure>
 				</a>
@@ -103,7 +103,7 @@ jQuery(function ($) {
 			<li class="mis-slide">
 				<a href="#" class="mis-container">
 					<figure>
-						<img src="images/garden07.jpg" alt="Lilly with Bee">
+						<img src="images/7.jpg" alt="Lilly with Bee">
 						<figcaption>name7</figcaption>
 					</figure>
 				</a>
