--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                                     <li class="navigation__item">
                                         <a href="livePic.html" class="blog-button">照片墙[picwall]</a>
                                     </li>
+                                    <li class="navigation__item">
+                                        <a href="Posttome.html" class="blog-button">向我投稿</a>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
