--- a/livePic.html
+++ b/livePic.html
@@ -4,19 +4,19 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1">
-<title>jQuery圆形横向图片轮播图切换</title>
+<title>喵酱们~~</title>
 
 <!-- 可无视 -->
-<link href="css/styles.css" rel="stylesheet">
+<link href="css1/styles.css" rel="stylesheet">
 
 <!-- Load jQuery -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js1/jquery.min.js"></script>
 
 <!-- 必要样式 -->
-<link href="css/mislider.css" rel="stylesheet">
-<link href="css/mislider-skin-cameo.css" rel="stylesheet">
+<link href="css1/mislider.css" rel="stylesheet">
+<link href="css1/mislider-skin-cameo.css" rel="stylesheet">
 
-<script type="text/javascript" src="js/mislider.js"></script>
+<script type="text/javascript" src="js1/mislider.js"></script>
 <script type="text/javascript">
 jQuery(function ($) {
 	var slider = $('.mis-stage').miSlider({
