--- a/Posttome.html
+++ b/Posttome.html
@@ -30,7 +30,7 @@
 	<h1 class="header-w3ls">
 		欢迎投稿（啾咪~~</h1>
 	<div class="appointment-w3">
-		<form action="jieshouku/" method="post">
+		<form action="" method="post">
 				<h2 class="wode">填写一下个人信息吧！</h2>
                   <div class="line-w3ls"> </div>
 				<div class="login-w3ls">
