--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/assets/css/iconfont.css">
     <link rel="apple-touch-icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/apple-touch-icon.png">
     <link rel="icon" href="https://fastly.jsdelivr.net/gh/dmego/home.github.io/favicon.ico">
+    <link rel="stylesheet" href="usuallyUsing.css">
     <title class="panel-cover__title panel-title iUp">INKY's Crown of Sin</title>
 </head>
 
@@ -79,8 +80,11 @@
                                     <li class="navigation__item">
                                         <a href="Posttome.html" class="blog-button">向我投稿</a>
                                     </li>
+                            
                                 </ul>
+                                
                             </nav>
+                            <a href="GAME1.html"><button class="draw">HORRIBLE GAME</button></a>
                         </div>
                         <div class="iUp">
                             <nav class="cover-navigation navigation--social">
