--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                                 </ul>
                                 
                             </nav>
-                            <a href="GAME1.html"><button class="draw">HORRIBLE GAME</button></a>
+                            <a href="GAME1.html"><button class="draw">HORRIBLE GAME_1</button></a>
+                            <a href="G2.html"><button class="draw">HORRIBLE GAME_2</button></a>
                         </div>
                         <div class="iUp">
                             <nav class="cover-navigation navigation--social">
