--- a/workPage.html
+++ b/workPage.html
@@ -30,7 +30,7 @@
 <section>
 
     <div class="container">
-        <h2 class="section-title"><span>《奇》连载中. . . (作者长期搞傻逼网站因此拖更严重) </span></h2>
+        <h2 class="section-title"><span>《奇》连载中. . . <br><br>(作者长期搞傻逼网站<br><br>因此拖更严重了) </span></h2>
         <div class="row">
             <div class="col-md-4">
                 <!-- Start Content Box -->
@@ -94,7 +94,7 @@
                         <h3 class="content-box-2-title">章节目录</h3>
                         <div class="content-box-2-content">Is it a real harem?Who the fucking knows?</div>
                     </div>
-                    <a class="content-box-2-button" href="./wenKu/wenku.html">Time to take off!</a>
+                    <a class="content-box-2-button" href="./wenKu/zhengwenku.html">Time to take off!</a>
                 </div>
                 <!-- End Content Box -->
             </div>
