--- a/wenKu/zhengwenku.html
+++ b/wenKu/zhengwenku.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>这是文章存放页？</title>
 	<link rel="stylesheet" href="css/colorfultpt.css">
+  <style>a{text-decoration:none};</style>
 </head>
 <body>
     <div class="title">文章仓库（欢迎</div>
@@ -12,13 +13,13 @@
         <li class="icon"><img src="" alt=""></li>
         <li class="name"><h1>序章</h1></li>
         <li class="price-col"><div class="cost">1/<small>X-UA</small></div></li>
-        <li class="description-range">小节题目</li>
-        <li class="description-range">小节题目</li>
-        <li class="description-range">小节题目</li>
-        <li class="description-range">小节题目</li>
-        <li class="description-range">小节题目</li>
-        <li class="description-range">小节题目</li>
-        <li class="description-range">小节题目</li>
+        <a href="../WODEARTI/Xuzhang.html"><li class="description-range">异变（一）</li></a>
+        <li class="description-range">敬请期待</li>
+        <li class="description-range">敬请期待</li>
+        <li class="description-range">敬请期待</li>
+        <li class="description-range">敬请期待</li>
+        <li class="description-range">敬请期待</li>
+        <li class="description-range">敬请期待</li>
         <li class="purchase"><a href="#">卷终章</a></li>
       </ul>
       <ul class="premium">
