--- a/workPage.html
+++ b/workPage.html
@@ -47,10 +47,10 @@
                         </span>
                     </div>
                     <div class="content-box-2-content-wrapper">
-                        <h3 class="content-box-2-title">各章节基本设定查看</h3>
+                        <h3 class="content-box-2-title">基本设定查看</h3>
                         <div class="content-box-2-content">View the basic settings of each chapter </div>
                     </div>
-                    <a class="content-box-2-button" href="#">Have a look!</a>
+                    <a class="content-box-2-button" href="./settings/settings.html">Have a look!</a>
                 </div>
                 <!-- End Content Box -->
             </div>
@@ -72,7 +72,7 @@
                         <h3 class="content-box-2-title">链接&插图</h3>
                         <div class="content-box-2-content">Illustrations and connections,some little goods</div>
                     </div>
-                    <a class="content-box-2-button" href="#">Shall we leave?</a>
+                    <a class="content-box-2-button" href="./tujian/timeline.html">Shall we leave?</a>
                 </div>
                 <!-- End Content Box -->
             </div>
