--- a/settings/settings.html
+++ b/settings/settings.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>30种炫酷CSS3鼠标滑过按钮动画特效</title>
+	<title>各种物器/魔法/药方</title>
 
 	<link href="css/main.css" rel="stylesheet" type="text/css"/>
 	<!--[if IE]>
