--- a/settings/settings.html
+++ b/settings/settings.html
@@ -18,19 +18,19 @@
 			<div id="wrapper-inner">
 				<div class="wrapper-inner-tab">
 					<div class="wrapper-inner-tab-title">设定集合</div>
-					<div class="wrapper-inner-tab-backgrounds">
-					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>设定N</span></div></div>
-					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
+					<div class="wrapper-inner-tab-backgrousnds">
+					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>命运之潮</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>潮息之印</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>魔药方</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>布尔士</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>朴素者</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>卜性指数</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>职阶序列</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>领域</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>亚空间</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>太阳系</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>银河系</span></div></div>
+					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>法莱尔学院</span></div></div>
 					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
 					<div class="wrapper-inner-tab-backgrounds-second"><div class="sim-button button10"><span>设定N</span></div></div>
 					<div class="wrapper-inner-tab-backgrounds-third"><div class="sim-button button10"><span>设定N</span></div></div>
