--- a/workPage.html
+++ b/workPage.html
@@ -101,5 +101,34 @@
         </div>
     </div>
 </section>
+<section class="bg-white">
+    <div class="container">
+        <h2 class="section-title"><span>《书名》</span></h2>
+        <div class="row">
+            <div class="col-md-6">
+                <!-- Start Content Box -->
+                <div class="content-box-23">
+                    <div class="content-box-23-content-wrapper">
+                        <h3 class="content-box-23-title">章节目录</h3>
+                        <div class="content-box-23-content">想说的一些话</div>
+                    </div>
+                    <a class="content-box-23-button" href="./wenKu2/zhengwenku.html">开始阅读</a>
+                </div>
+                <!-- End Content Box -->
+            </div>
+            <div class="col-md-6">
+                <!-- Start Content Box -->
+                <div class="content-box-23 color-2">
+                    <div class="content-box-23-content-wrapper">
+                        <h3 class="content-box-23-title">设定查看</h3>
+                        <div class="content-box-23-content">一些话</div>
+                    </div>
+                    <a class="content-box-23-button" href="#">查看</a>
+                </div>
+                <!-- End Content Box -->
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
