--- a/Posttome.html
+++ b/Posttome.html
@@ -87,7 +87,7 @@
   }
   else {
     $(".file-upload").addClass('active');
-    $("#noFile").text(filename.replace("C:\\fakepath\\", "")); 
+    $("#noFile").text(filename.replace("C:/Users/Administrator/Desktop/kk", "")); 
   }
 });
 </script>
