--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         <a href="workPage.html" class="blog-button" target="_blank">文章仓库（欢迎~~~）</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://r.dmego.cn" class="blog-button" target="_blank">小小的介绍</a>
+                                        <a href="./Kesulu/kesulu.html" class="blog-button" target="_blank">小小的介绍</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://dmego.cn/about/" class="blog-button" target="_blank">我和我的伙伴</a>
