--- a/wenKu/zhengwenku.html
+++ b/wenKu/zhengwenku.html
@@ -13,7 +13,7 @@
         <li class="icon"><img src="" alt=""></li>
         <li class="name"><h1>序章</h1></li>
         <li class="price-col"><div class="cost">1/<small>X-UA</small></div></li>
-        <a href="../WODEARTI/Xuzhang.html"><li class="description-range">异变（一）</li></a>
+        <a href="../WODEARTI/T_1.md"><li class="description-range">模糊</li></a>
         <li class="description-range">敬请期待</li>
         <li class="description-range">敬请期待</li>
         <li class="description-range">敬请期待</li>
