--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="navbar-header page-scroll">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Navigation</span>
+                        <span class="sr-only"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -37,11 +37,11 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class="page-scroll" href="#page-top">主页</a></li>
-                        <li><a class="page-scroll" href="#features">Features</a></li>
-                        <li><a class="page-scroll" href="#team">Team</a></li>
-                        <li><a class="page-scroll" href="#testimonials">Testimonials</a></li>
-                        <li><a class="page-scroll" href="#pricing">Pricing</a></li>
-                        <li><a class="page-scroll" href="#contact">Contact</a></li>
+                        <li><a class="page-scroll" href="#features">作者</a></li>
+                        <li><a class="page-scroll" href="#team">团队</a></li>
+                        <li><a class="page-scroll" href="#testimonials">更多</a></li>
+
+                        <li><a class="page-scroll" href="#contact">地址</a></li>
                     </ul>
                 </div>
             </div>
@@ -69,12 +69,9 @@
                         Only when the hearts integrate with each other can they hurt themselves
                         </p>
                     <p>
-                        <a class="btn btn-lg btn-primary" href="#" role="button">开始走近我们</a>
+                        <a class="btn btn-lg btn-primary" href="#" role="button">开始</a>
                     
                     </p>
-                </div>
-                <div class="carousel-image wow zoomIn">
-                    <img src="img/laptop.png" alt="laptop"/>
                 </div>
             </div>
             <!-- Set background for slide in css -->
@@ -89,7 +86,7 @@
 
                         Mutual understanding leads to mutual domination, <br/>and we are just pursuing our own pleasure
                         </p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">开始走近我们</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">开始</a></p>
                 </div>
             </div>
             <!-- Set background for slide in css -->
@@ -183,6 +180,11 @@
             <p>我们欢迎对自己的幻想坦诚相待，对自己的作品敞开心扉，不惧嘲笑，天马行空的作者。<br/>当然我们也欢迎充满新意的特立独行者，我们的幻想本身就是多元的（当然也包括了多元的XP），然无所谓什么画里真真。</p>
             <a href="" class="btn btn-primary">进来看看</a>
         </div>
+        <div>
+
+        </div>
+
+
         <div class="col-lg-6 text-right wow fadeInRight">
             <img src="img/dashboard.png" alt="dashboard" class="img-responsive pull-right">
         </div>
@@ -204,14 +206,7 @@
                     <img src="img/touxiang1.jpg" class="img-responsive img-circle img-small" alt="">
                     <h4><span class="navy">INKY</span> Emilier</h4>
                     <p>自闭站长，牛马高中生，不务正业天天意淫，喜欢看番，喜欢把自己的意淫记录下来，喜欢猫娘，萝莉。不喜欢自以为是的蠢货，不喜欢有z轴的妹子。就这样吧。</p>
-                    <ul class="list-inline social-icon">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
+
                 </div>
             </div>
             <div class="col-sm-4">
@@ -219,14 +214,7 @@
                     <img src="img/touxiang3.jpg" class="img-responsive img-circle img-small" alt="">
                     <h4><span class="navy">刘嘉晨</span> 电锯狗</h4>
                     <p>你们要说的介绍</p>
-                    <ul class="list-inline social-icon">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
+
                 </div>
             </div>
             <div class="col-sm-4 wow fadeInRight">
@@ -234,14 +222,7 @@
                     <img src="img/touxiang2.jpg" class="img-responsive img-circle img-small" alt="">
                     <h4><span class="navy">徐伟涛</span> XWT</h4>
                     <p>你们要说的介绍</p>
-                    <ul class="list-inline social-icon">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
+  
                 </div>
             </div>
             
@@ -271,7 +252,7 @@
                 <a href="" class="btn btn-primary">Learn more</a>
             </div>
             <div class="col-lg-6 text-right m-t-n-lg wow zoomIn">
-                <img src="img/iphone.jpg" class="img-responsive" alt="dashboard">
+                <img src="img/hhh.png" class="img-responsive" alt="dashboard">
             </div>
             <div class="col-lg-3 features-text text-right wow fadeInRight">
                 <small>INSPINIA</small>
@@ -291,10 +272,10 @@
             <div class="col-lg-12 text-center wow zoomIn">
                 <i class="fa fa-comment big-icon"></i>
                 <h1>
-                    What our users say
+                    杂文或散文选（意淫且不只是意淫！）
                 </h1>
                 <div class="testimonials-text">
-                    <i>"Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)."</i>
+                    <i>"Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. <br/>Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)."</i>
                 </div>
                 <small>
                     <strong>12.02.2014 - Andy Smith</strong>
