--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">更多帮助 MORE HELP</a>
+                    <a class="navbar-brand" href="./help.md">更多帮助 MORE HELP</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -69,7 +69,7 @@
                         Only when the hearts integrate with each other can they hurt themselves
                         </p>
                     <p>
-                        <a class="btn btn-lg btn-primary" href="#" role="button">开始</a>
+                        <a class="btn btn-lg btn-primary" href="./wths/index.html" role="button">开始</a>
                     
                     </p>
                 </div>
@@ -86,7 +86,7 @@
 
                         Mutual understanding leads to mutual domination, <br/>and we are just pursuing our own pleasure
                         </p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">开始</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="./wths/index.html" role="button">开始</a></p>
                 </div>
             </div>
             <!-- Set background for slide in css -->
@@ -109,7 +109,7 @@
         <div class="col-sm-3">
             <h2>《愚蠢世界的孤独》</h2>
             <p>殷借助古书里的不知名法阵来到一个充满蒸气与机械的世界，在这个世界时常发生奇怪，难以解释的事情。失去部分记忆的他陷入了一个个谜团之中，当然也邂逅了一位位不可名状的怪物少女。渐渐地，殷慢慢解开了有关这个世界的秘密以及自己为什么会来到这个世界的记忆。</p>
-            <p><a class="navy-link" href="#" role="button">后宫 悬疑 蒸气朋克 剧情 &raquo;</a></p>
+            <p><a class="navy-link" href="./writers/INKYp/wenku/wenzhang.html" role="button">后宫 悬疑 蒸气朋克 剧情 &raquo;</a></p>
         </div>
         <div class="col-sm-3">
             <h2>《徐伟涛的书名》</h2>
@@ -257,7 +257,7 @@
                 <small>ご主人様、あなたの要求を出して、何でもいいですよ</small>
                 <h2>完美设计源自你们的想象</h2>
                 <p>本站点近期开设，诸多方面有待完善，对于作者专区的设计，每位作者都可以提出自己的要求，站长会努力实现。</p>
-                <a href="" class="btn btn-primary">进入作者专区</a>
+                <a href="./wths/index.html" class="btn btn-primary">进入作者专区</a>
             </div>
         </div>
     </div>
