--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <i class="fa fa-envelope features-icon"></i>
                 <h2>作者邮箱地址</h2>
                 <p>站长邮箱：3359832471@qq.com<br/>
-                   徐伟涛邮箱：1249900531@qq.com<br/>
+                   北瞻邮箱：1249900531@qq.com<br/>
                    柳嘉晨邮箱：2826845831@qq.com</p>
             </div>
             <div class="m-t-lg">
@@ -206,7 +206,7 @@
             <div class="col-sm-4 wow fadeInLeft">
                 <div class="team-member">
                     <img src="img/touxiang1.jpg" class="img-responsive img-circle img-small" alt="">
-                    <h4><span class="navy">INKY</span> Emilier</h4>
+                    <h4><a href="./writers/INKYp/index.html"><span class="navy">INKY</span></a> Emilier</h4>
                     <p>自闭站长，牛马高中生，不务正业天天意淫，喜欢看番，喜欢把自己的意淫记录下来，喜欢猫娘，萝莉。不喜欢自以为是的蠢货，不喜欢有z轴的妹子。就这样吧。</p>
 
                 </div>
@@ -222,7 +222,7 @@
             <div class="col-sm-4 wow fadeInRight">
                 <div class="team-member">
                     <img src="img/touxiang2.jpg" class="img-responsive img-circle img-small" alt="">
-                    <h4><span class="navy">徐伟涛</span> XWT</h4>
+                    <h4><span class="navy">北瞻</span> XWT</h4>
                     <p>你们要说的介绍</p>
   
                 </div>
