--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <h2>作者邮箱地址</h2>
                 <p>站长邮箱：3359832471@qq.com<br/>
                    北瞻邮箱：1249900531@qq.com<br/>
-                   柳嘉晨邮箱：2826845831@qq.com</p>
+                   加C的愣头青的邮箱：2826845831@qq.com</p>
             </div>
             <div class="m-t-lg">
                 <i class="fa fa-google features-icon"></i>
@@ -214,8 +214,8 @@
             <div class="col-sm-4">
                 <div class="team-member wow zoomIn">
                     <img src="img/touxiang3.jpg" class="img-responsive img-circle img-small" alt="">
-                    <h4><span class="navy">刘嘉晨</span> 电锯狗</h4>
-                    <p>你们要说的介绍</p>
+                    <h4><span class="navy">加C的愣头青</span> 电锯狗</h4>
+                    <p>正在努力学画画的中二高中生，超超超超极喜欢动漫，本团队预备画师。</p>
 
                 </div>
             </div>
@@ -223,7 +223,7 @@
                 <div class="team-member">
                     <img src="img/touxiang2.jpg" class="img-responsive img-circle img-small" alt="">
                     <h4><span class="navy">北瞻</span> XWT</h4>
-                    <p>你们要说的介绍</p>
+                    <p>他很懒什么也没有留下。</p>
   
                 </div>
             </div>
