--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="col-sm-4">
                 <div class="team-member wow zoomIn">
                     <img src="img/touxiang3.jpg" class="img-responsive img-circle img-small" alt="">
-                    <h4><span class="navy">加C的愣头青</span> 电锯狗</h4>
+                    <h4><a href="./writers/DOGp/inde.html"><span class="navy">加C的愣头青</span></a> 电锯狗</h4>
                     <p>正在努力学画画的中二高中生，超超超超极喜欢动漫，本团队预备画师。</p>
 
                 </div>
