--- a/wths/index.html
+++ b/wths/index.html
@@ -122,6 +122,16 @@
 							</dd>
 						</dl>
 					</div>
+					<div class="row">
+						<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 wow animated fadeInUp">
+							<dl class="dl-horizontal">
+								<dt class="cssa274b01dd50cc">07-17<span>2022</span></dt>
+								<dd>
+									<h3><a href="../writers/INKYp/wenku/wenzhang.html">《愚蠢世界的孤独》的‘序章二’至‘卷终章更新’</a> <img src="skin/images/new.gif" alt=""/></h3>
+									<p class="hg-2">我们都很孤单，像贝壳一样，对吗？</p>
+								</dd>
+							</dl>
+						</div>
 					
 
 				</div>
