--- a/writers/INKYp/wenku/wenku/zhengwenku.html
+++ b/writers/INKYp/wenku/wenku/zhengwenku.html
@@ -27,7 +27,7 @@
         <li class="name"><h1>第一章</h1></li>
         <li class="price-col"><div class="cost">2/<small>X-UA</small></div></li>
         <a href="./arti/diyizhang/1/index.html"><li class="description-range">2/X-UA-1</li></a>
-        <li class="description-range">小节题目</li>
+        <a href="./arti/diyizhang/2/index.html"><li class="description-range">2/X-UA-2</li></a>
         <li class="description-range">小节题目</li>
         <li class="description-range">小节题目</li>
         <li class="description-range">小节题目</li>
