--- a/青塔/青塔6_29.html
+++ b/青塔/青塔6_29.html
@@ -174,7 +174,7 @@
     <div class="row">
       <div class="col-lg-7 col-md-7 col-lg-offset-4">
         <div class="comments">
-          <img class="img-circle" src="../img/team/子墨头像.png" height="60px" width="60px">
+          <img class="img-circle" src="../img/team/子墨头像.jpg" height="60px" width="60px">
           <h4>【天权】诸葛子墨 - June 29, 2023</h4>
           <p><a href="#">REPLY</a></p>
           <p>我个人觉得挺好的，写的都是写现实的东西，比较喜欢‘观察人世’的视角， 感觉讲了一些当代泛娱乐弊病和一些社会不公（学术上和经济上什么的），嘶，但总感觉还是有点虚无（历史的？个人的？）的意味在里面，氛围我应该接住了。</p>
