--- a/青塔/青塔6_29.html
+++ b/青塔/青塔6_29.html
@@ -184,7 +184,7 @@
           <img class="img-circle" src="../img/team/文若头像.jpg" height="60px" width="60px">
           <h4>社长？ - June 29, 2023</h4>
           <p><a href="#">REPLY</a></p>
-          <p>Their chief function is to form flesh in the body; but without previously forming it, they may be transformed into fat or merely give rise to heat. They form the essential part of every living cell.</p>
+          <p>能感受到作者对于阶级和盛宴两个方向的思考。第二部分的引用比较精彩，但在文意传达上可能还需要更切实一些。</p>
         </div>
       </div>
     </div>
