--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </figcaption>
       </figure>
       <figure>
-        <a href="#" class="photostack-img"><img src="./img/team/子墨头像.png" alt="img03"/></a>
+        <a href="#" class="photostack-img"><img src="./img/team/子墨头像.jpg" alt="img03"/></a>
         <figcaption>
           <a href="#"><h2 class="photostack-title">《漂流瓶》</h2></a>
         </figcaption>
